<resources>
    <string name="app_name">Cerebro</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Customer</string>
    <string name="action_update">Update Customer</string>

    <string name="action_search">Search</string>
    <string name="action_list">List</string>

    <string name="title_activity_main2">Main2Activity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="title_activity_list">ListActivity</string>


</resources>
