<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list"
        android:title="@string/action_list"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="always" />

    <item android:id="@+id/action_new_customer" android:title="@string/action_new"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_update_customer" android:title="@string/action_update"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
